<resources>
    <string name="app_name">Training Buddy</string>

    <!-- values for dropdown menu -->
    <string name="main">Timer</string>
    <string name="settings">Settings</string>
    <string name="reminder">Reminder</string>
    <string name="database">Database</string>
    <string name="add_to_database">Add to database</string>

    <!--values for main activity-->
    <string name="gps_not_granted">Access to GPS not granted</string>
    <string name="kilometers"> km</string>
    <string name="speed_unit"> km/h</string>
    <string name="burned_calories">Burned calories: </string>
    <string name="default_activity">Running</string>

    <string name="start_button">Start!</string>
    <string name="start_button_toggled">Stop / Reset</string>
    <string name="gps_not_enabled">GPS disabled!\nWant to turn it on?</string>
    <string name="enable">Yes</string>
    <string name="dont_enable">No</string>

    <!--values for database activity-->
    <string name="save_distance">Save to database</string>
    <string name="select_activity">Select activity:</string>
    <string-array name="activity_options_database">
        <item>All</item>
        <item>Walking</item>
        <item>Running</item>
        <item>Sprint</item>
        <item>Biking</item>
    </string-array>
    <string name="delete_table">Delete all records in database</string>
    <string name="delete_warning">Warning!</string>
    <string name="dialog_delete_table">Are You sure?\nAll Your data will be deleted!</string>
    <string name="dialog_positive_response">Yes!</string>
    <string name="dialog_negative_response">No</string>
    <string name="dialog_data_not_deleted">All your data is safe... so far.</string>


    <!--values for options-->
    <string name="night_mode">Night mode</string>
    <string name="notifications">Enable reminder</string>
    <string name="wight_label">Weight:</string>
    <string name="height_name">Height:</string>
    <string name="activity_label">Activity: </string>
    <string name="save_data_button">Save options</string>
    <string-array name="activity_options">
        <item>Walking</item>
        <item>Running</item>
        <item>Sprint</item>
        <item>Biking</item>
    </string-array>
    <string name="gender_label">Gender:</string>
    <string-array name="gender_options">
        <item>Male</item>
        <item>Female</item>
    </string-array>
    <string name="night_mode_toast">Night mode is on</string>
    <string name="night_mode_toast_disabled">Night mode is off</string>
    <string name="settings_save_success">Settings saved successfully</string>

    <!-- values for reminder -->
    <string name="monday">Monday</string>
    <string name="tuesday">Tuesday</string>
    <string name="wednesday">Wednesday</string>
    <string name="thursday">Thursday</string>
    <string name="friday">Friday</string>
    <string name="saturday">Saturday</string>
    <string name="sunday">Sunday</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>
