<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.andrzejkalkowski.joggingarchivizer.Controller.OptionsActivity">

    <Switch
        android:id="@+id/notifications_switch"
        android:layout_width="0dp"
        android:layout_height="18dp"
        android:layout_marginTop="24dp"
        android:text="@string/notifications"
        android:textAlignment="textStart"
        android:textSize="18sp"
        app:layout_constraintEnd_toEndOf="@+id/night_mode_switch"
        app:layout_constraintStart_toStartOf="@+id/night_mode_switch"
        app:layout_constraintTop_toBottomOf="@+id/night_mode_switch" />

    <Spinner
        android:id="@+id/gender_spinner"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:textAlignment="center"
        app:layout_constraintBottom_toBottomOf="@+id/gender_label"
        app:layout_constraintEnd_toEndOf="@+id/edit_weight"
        app:layout_constraintStart_toStartOf="@+id/edit_height"
        app:layout_constraintTop_toTopOf="@+id/gender_label" />

    <TextView
        android:id="@+id/gender_label"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:labelFor="@id/activity_options_spinner"
        android:text="@string/gender_label"
        android:textSize="18sp"
        app:layout_constraintStart_toStartOf="@+id/heightView"
        app:layout_constraintTop_toBottomOf="@+id/heightView" />

    <TextView
        android:id="@+id/activity_label"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:labelFor="@id/activity_options_spinner"
        android:text="@string/activity_label"
        android:textSize="18sp"
        app:layout_constraintStart_toStartOf="@+id/gender_label"
        app:layout_constraintTop_toBottomOf="@+id/gender_label" />

    <Switch
        android:id="@+id/night_mode_switch"
        android:layout_width="0dp"
        android:layout_height="18dp"
        android:layout_marginEnd="24dp"
        android:layout_marginStart="24dp"
        android:layout_marginTop="24dp"
        android:text="@string/night_mode"
        android:textAlignment="textStart"
        android:textSize="18sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/edit_weight"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:ems="10"
        android:inputType="numberDecimal"
        app:layout_constraintBaseline_toBaselineOf="@+id/weightView"
        app:layout_constraintEnd_toEndOf="@+id/notifications_switch"
        app:layout_constraintStart_toEndOf="@+id/weightView" />

    <EditText
        android:id="@+id/edit_height"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:ems="10"
        android:inputType="number"
        app:layout_constraintBaseline_toBaselineOf="@+id/heightView"
        app:layout_constraintEnd_toEndOf="@+id/edit_weight"
        app:layout_constraintStart_toStartOf="@+id/edit_weight" />

    <TextView
        android:id="@+id/weightView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:labelFor="@id/edit_weight"
        android:text="@string/wight_label"
        android:textSize="18sp"
        app:layout_constraintStart_toStartOf="@+id/notifications_switch"
        app:layout_constraintTop_toBottomOf="@+id/notifications_switch" />

    <TextView
        android:id="@+id/heightView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:labelFor="@id/edit_height"
        android:text="@string/height_name"
        android:textSize="18sp"
        app:layout_constraintStart_toStartOf="@+id/weightView"
        app:layout_constraintTop_toBottomOf="@+id/weightView" />

    <Spinner
        android:id="@+id/activity_options_spinner"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:spinnerMode="dropdown"
        android:textAlignment="center"
        app:layout_constraintBottom_toBottomOf="@+id/activity_label"
        app:layout_constraintEnd_toEndOf="@+id/edit_weight"
        app:layout_constraintStart_toStartOf="@+id/gender_spinner"
        app:layout_constraintTop_toTopOf="@+id/activity_label" />

    <Button
        android:id="@+id/button_save"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="24dp"
        android:onClick="saveOptions"
        android:text="@string/save_data_button"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="@+id/activity_label" />

    <Button
        android:id="@+id/button_delete_table"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:text="@string/delete_table"
        app:layout_constraintStart_toStartOf="@+id/activity_label"
        app:layout_constraintTop_toBottomOf="@+id/activity_label" />

</android.support.constraint.ConstraintLayout>
